# SphereTrans.jl

./: ACCURACY_FIXES_SUMMARY.md  CHANGELOG.md  LICENSE  OPTIMIZATION_REPORT.md  PARALLEL_FEATURES.md  PERFORMANCE_OPTIMIZATION_REPORT.md  Project.toml  README.md  SHTNS_ACCURACY_WORKAROUND.md  SIMD_VECTORIZATION_GUIDE.md  ZERO_ALLOCATION_IMPLEMENTATION_COMPLETE.md  analyze_allocations.jl  benchmark_ad_performance.jl  benchmark_zero_alloc.jl  build_tarballs.jl  build_tarballs_full.jl  build_tarballs_simple.jl  debug_config.jl  debug_config_norm.jl  debug_create_with_grid.jl  debug_derivative_test.jl  debug_direct.jl  debug_exact_precision.jl  debug_mixed_modes.jl  debug_normalization_type.jl  debug_precision_analysis.jl  debug_scalar_comparison.jl  debug_schmidt_factors.jl  debug_shtns_calls.jl  debug_synthesis.jl  debug_test.jl  debug_transform.jl  debug_vector_multiple_modes.jl  debug_vector_single_mode.jl  final_validation.jl  performance_analysis.jl  profile_analysis.jl  restore_machine_precision.jl  run_basic_test.jl  run_vector_test.jl  (+28 more)
.github/workflows/: CI.yml  CompatHelper.yml  TagBot.yml  basic-ci.yml  ci.yml  docs.yml  documentation.yml  e2e-with-jll.yml  hello.yml  jll-tests.yml  minimal.yml  mpi-examples.yml  pages.yml  shtns-aware.yml  test.yml
.julia_depot/logs/: artifact_usage.toml
.julia_depot/registries/: General.toml
SHTnsKit_jll/: Artifacts.toml  DEVELOPING.md  Project.toml  README.md  build_tarballs.jl
SHTnsKit_jll/scripts/: generate_artifacts_toml.jl
SHTnsKit_jll/src/: SHTnsKit_jll.jl
SHTnsKit_jll/test/: runtests.jl
SHTnsKit_jll/yggdrasil/: PR_TEMPLATE.md
dev/: .documenter-siteinfo.json  index.html  search_index.js
dev/advanced/: index.html
dev/api/: index.html
dev/distributed/: index.html
dev/examples/: index.html
dev/grids/: index.html
dev/installation/: index.html
docs/: AD_ACCURACY_FIXES.md  Distributed_SHTnsKit_Guide.md  Project.toml  TROUBLESHOOTING.md  advanced_ad_summary.md  advanced_optimizations_summary.md  automatic_differentiation.md  emoji_removal_summary.md  make.jl  matrix_optimization_summary.md  normalization_reference.md  parallel_optimization_summary.md  recurrence_improvements.md  setup_docs_env.jl  workflow_optimization_summary.md
examples/: ad_examples.jl  ad_vector_zygote.jl  advanced_ad_examples.jl  alloc_benchmark.jl  autodiff_demo.jl  benchmark_threading.jl  compare_real_complex.jl  compare_vector_real_complex.jl  comprehensive_demo.jl  differentiation_examples.jl  gpu_acceleration_demo.jl  mpi_comprehensive_demo.jl  mpi_demo.jl  operator_parallel.jl  parallel_example.jl  parallel_fft_roundtrip.jl  parallel_roundtrip.jl  performance_comparison.jl  profile_complex.jl  record_benchmarks.jl  rotate_y_parallel.jl  rsw_mpi.jl  rsw_mpi_full.jl  vector_field_demo.jl
ext/: SHTnsKitAdvancedADExt.jl  SHTnsKitCUDAExt.jl  SHTnsKitForwardDiffExt.jl  SHTnsKitForwardDiffExt_Optimized.jl  SHTnsKitForwardDiffExt_ZeroAlloc.jl  SHTnsKitLoopVecExt.jl  SHTnsKitMPIExt.jl  SHTnsKitParallelExt.jl  SHTnsKitZygoteExt.jl  SHTnsKitZygoteExt_Optimized.jl  SHTnsKitZygoteExt_ZeroAlloc.jl  parallel_diagnostics.jl  parallel_dispatch.jl  parallel_local.jl  parallel_ops_pencil.jl  parallel_plans.jl  parallel_rotations_pencil.jl  parallel_transforms.jl
old_/: README.md  SHTnsKit.jl  test_library_path.jl
shtns/: .gitlab-ci.yml  CHANGELOG.md  COPYRIGHT  MANIFEST.in  Makefile  Makefile.in  README.md  config.status  configure  configure.ac  cuda2hip.h  cuda2hip_gen.py  cudamaxrelerror.cu  pyproject.toml  setup.py  sht_com.c  sht_config.h  sht_config.h.in  sht_func.c  sht_gpu.cu  sht_gpu_kernels.cu  sht_init.c  sht_legendre.c  sht_private.h  shtns.f  shtns.h  shtns.py  shtns_cuda.f03  shtns_cuda.h  shtns_cuda_wrap.c  shtns_numpy.i  shtns_numpy_wrap.c  shtns_simd.h  test_suite.sh  time_SHT.c
shtns/SHT/: Makefile  SH_to_spat_fly.c  SH_to_spat_kernel.c  SH_to_spat_omp.c  SHqst_to_spat_fly.c  SHqst_to_spat_kernel.c  SHqst_to_spat_omp.c  SHs_to_spat_fly.c  SHs_to_spat_kernel.c  SHs_to_spat_omp.c  SHst_to_spat_fly.c  SHst_to_spat_kernel.c  SHst_to_spat_omp.c  SHt_to_spat_fly.c  SHt_to_spat_kernel.c  SHt_to_spat_omp.c  cuda_legendre.gen.cu  fly_SH_to_spat.gen.c  fly_spat_to_SH.gen.c  kernel_SH_to_spat.gen.c  kernel_spat_to_SH.gen.c  omp_SH_to_spat.gen.c  omp_spat_to_SH.gen.c  spat_to_SH_fly.c  spat_to_SH_kernel.c  spat_to_SH_omp.c  spat_to_SHqst_fly.c  spat_to_SHqst_kernel.c  spat_to_SHqst_omp.c  spat_to_SHst_fly.c  spat_to_SHst_kernel.c  spat_to_SHst_omp.c
shtns/doc/: main.dox
shtns/examples/: SHT_example.py  SHT_gpu_example.py  shallow_water.py  test_suite.c
shtns/hiprec/: high_precision.h
shtns/include/: shtns.f03
shtns/vkfft/: vkFFT.h
src/: README.md  SHTnsKit.jl  advanced_communication_patterns.jl  advanced_optimizations.jl  advanced_performance_tuning.jl  api.jl  api_compat.jl  benchmarking_suite.jl  complex_packed.jl  complex_transforms.jl  config.jl  core_transforms.jl  diagnostics.jl  fft_utils.jl  fftutils.jl  gauss_legendre.jl  gausslegendre.jl  grid_utils.jl  highlevel.jl  layout.jl  legendre.jl  libshtns.jl  local.jl  mathutils.jl  matrix_operators.jl  nonblocking_parallel_ops.jl  normalization.jl  operators.jl  parallel_dense.jl  parallel_integration.jl  parallel_matrix_ops.jl  performance_optimizations.jl  plan.jl  platform_support.jl  point_evaluation.jl  robert_form.jl  rotations.jl  simd_matrix_ops.jl  single_m_transforms.jl  special_functions.jl  (+10 more)
test/: README.md  runtests.jl  test_ad_accuracy.jl  test_ad_forwarddiff.jl  test_ad_zygote.jl  test_autodiff.jl  test_basic.jl  test_basic_working.jl  test_benchmarks.jl  test_complex.jl  test_complex_transforms.jl  test_complex_vector.jl  test_gpu.jl  test_matrix_operators.jl  test_mpi.jl  test_new_features.jl  test_point_evaluation.jl  test_profiling.jl  test_real_parity.jl  test_rotation.jl  test_rotation_spatial.jl  test_spectral_ops.jl  test_threading.jl  test_truncated_transforms.jl  test_vector.jl  test_vector_transforms.jl
v1.1.0/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v1.1.1/: .documenter-siteinfo.json  index.html  objects.inv
(+254 files in other folders)
